third push paragraph added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>First Push</h1>
     <h1>Iam Naveen Reddy</h1>
+    <p>I ama naveen reddy dornala 100codres amazon will be</p>
     
 </body>
 </html>
