changed project fourth project

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>First Push</h1>
-    <h1>Iam Naveen Reddy</h1>
-    <p>I ama naveen reddy dornala 100codres amazon will be</p>
+    <h1>Hello hai</h1>
+    <h1>hello hai</h1>
+    <h1>Hello everyone</h1>
+    <h1>every one hai</h1>
+
     
 </body>
 </html>
